RF: PharmaceuticalDoseAmount - shift mentioning of a "tracer" into PET use
We are to introduce use of Pharma* fields into BEP032 where it has no notion of tracers.
I am moving this extra description to become PET specific, but also PET people might want
to double check if that is what was actually intended (or it could be administered separate
from the tracer

--- a/src/schema/objects/metadata.yaml
+++ b/src/schema/objects/metadata.yaml
@@ -2796,7 +2796,7 @@ PharmaceuticalDoseAmount:
   name: PharmaceuticalDoseAmount
   display_name: Pharmaceutical Dose Amount
   description: |
-    Dose amount of pharmaceutical coadministered with tracer.
+    Dose amount of administered pharmaceutical.
   anyOf:
     - type: number
     - type: array
