--- a/src/schema/meta/associations.yaml
+++ b/src/schema/meta/associations.yaml
@@ -112,3 +112,11 @@ coordsystems:
     entities:
       - space
   inherit: true
+
+atlas_description:
+  selectors:
+    - entities.atlas
+    - extension != '.json'
+  target:
+    suffix: description
+    extension: .json
