--- a/src/schema/rules/directories.yaml
+++ b/src/schema/rules/directories.yaml
@@ -114,10 +114,17 @@ derivative:
       - sourcedata
       - stimuli
       - subject
+      - template
   code:
     name: code
     level: optional
     opaque: true
+  cohort:
+    entity: cohort
+    level: optional
+    opaque: false
+    subdirs:
+      - datatype
   docs:
     name: docs
     level: optional
@@ -154,6 +161,13 @@ derivative:
     level: optional
     opaque: false
     subdirs:
+      - datatype
+  template:
+    entity: template
+    level: optional
+    opaque: false
+    subdirs:
+      - cohort
       - datatype
   datatype:
     value: datatype
