--- a/src/schema/meta/context.yaml
+++ b/src/schema/meta/context.yaml
@@ -298,6 +298,15 @@ properties:
             type: array
             items:
               type: string
+      atlas_description:
+        description: 'Atlas description file'
+        type: object
+        required: [path]
+        additionalProperties: false
+        properties:
+          path:
+            description: 'Path to associated atlas description file'
+            type: string
   # The following properties are populated if the current file is of an appropriate type
   columns:
     description: 'TSV columns, indexed by column header, values are arrays with column contents'
