--- a/src/schema/rules/entities.yaml
+++ b/src/schema/rules/entities.yaml
@@ -2,7 +2,9 @@
 # This file simply defines the order in which entities should appear within filenames.
 # Entity definitions appear in the `objects/entities.yaml` file.
 - subject
+- template
 - session
+- cohort
 - sample
 - task
 - tracksys
@@ -27,7 +29,9 @@
 - split
 - recording
 - chunk
+- atlas
 - segmentation
+- scale
 - resolution
 - density
 - label
