--- a/src/schema/rules/sidecars/pet.yaml
+++ b/src/schema/rules/sidecars/pet.yaml
@@ -61,13 +61,8 @@ PETRadioChemistry:
   fields:
     TracerName:
       level: required
-      description_addendum: |
-        Corresponds to DICOM Tags (0008,0105) `Mapping Resource` and
-        (0008,0122) `Mapping Resource Name`.
     TracerRadionuclide:
       level: required
-      description_addendum: |
-        Corresponds to DICOM Tags (0008,0104) `CodeValue` and (0008,0104) `CodeMeaning`.
     InjectedRadioactivity: required
     InjectedRadioactivityUnits: required
     InjectedMass: required
@@ -120,24 +115,11 @@ PETPharmaceuticals:
     - datatype == "pet"
     - suffix == "pet"
   fields:
-    PharmaceuticalName:
-      level: recommended
-      description_addendum: |
-        For pharmaceutical co-administered with tracer.
-        Corresponds to [DICOM Tag 0018, 0034](https://dicomlookup.com/dicomtags/(0018,0034)) `Intervention Drug Name`.
-    PharmaceuticalDoseAmount:
-      level: recommended
-      description_addendum: |
-        For pharmaceutical co-administered with tracer.
-        Corresponds to [DICOM Tag 0018, 0028](https://dicomlookup.com/dicomtags/(0018,0028)) `Intervention Drug Dose`.
+    PharmaceuticalName: recommended
+    PharmaceuticalDoseAmount: recommended
     PharmaceuticalDoseUnits: recommended
     PharmaceuticalDoseRegimen: recommended
-    PharmaceuticalDoseTime:
-      level: recommended
-      description_addendum: |
-        Corresponds to a combination of DICOM Tags
-        [0018, 0027](https://dicomlookup.com/dicomtags/(0018,0027)) `Intervention Drug Stop Time` and
-        [0018, 0035](https://dicomlookup.com/dicomtags/(0018,0035)) `Intervention Drug Start Time`.
+    PharmaceuticalDoseTime: recommended
     Anaesthesia: optional
 
 PETTime:
@@ -147,22 +129,11 @@ PETTime:
   fields:
     TimeZero: required
     ScanStart: required
-    InjectionStart:
-      level: required
-      description_addendum: |
-        Corresponds to [DICOM Tag 0018, 1072](https://dicomlookup.com/dicomtags/(0018,1072))
-        `Radiopharmaceutical Start Time`.
+    InjectionStart: required
     FrameTimesStart: required
     FrameDuration: required
-    InjectionEnd:
-      level: recommended
-      description_addendum: |
-        Corresponds to [DICOM Tag 0018, 1073](https://dicomlookup.com/dicomtags/(0018,1073))
-        `Radiopharmaceutical Stop Time` converted to seconds relative to TimeZero.
-    ScanDate:
-      level: deprecated
-      description_addendum: |
-        Corresponds to [DICOM Tag 0008, 0022](https://dicomlookup.com/dicomtags/(0008,0022)) `Acquisition Date`.
+    InjectionEnd: recommended
+    ScanDate: deprecated
 
 PETReconstruction:
   selectors:
@@ -172,59 +143,25 @@ PETReconstruction:
     AcquisitionMode: required
     ImageDecayCorrected: required
     ImageDecayCorrectionTime: required
-    ReconMethodName:
-      level: required
-      description_addendum: |
-        This partly matches the [DICOM Tag 0054, 1103](https://dicomlookup.com/dicomtags/(0054,1103))
-        `Reconstruction Method`.
-    ReconMethodParameterLabels:
-      level: required
-      description_addendum: |
-        This partly matches the [DICOM Tag 0054, 1103](https://dicomlookup.com/dicomtags/(0054,1103))
-        `Reconstruction Method`.
+    ReconMethodName: required
+    ReconMethodParameterLabels: required
     ReconMethodParameterUnits:
       level: recommended
       level_addendum: required if `ReconMethodParameterLabels` does not contain `"none"`
-      description_addendum: |
-        This partly matches the [DICOM Tag 0054, 1103](https://dicomlookup.com/dicomtags/(0054,1103))
-        `Reconstruction Method`.
     ReconMethodParameterValues:
       level: recommended
       level_addendum: required if `ReconMethodParameterLabels` does not contain `"none"`
-      description_addendum: |
-        This partly matches the [DICOM Tag 0054, 1103](https://dicomlookup.com/dicomtags/(0054,1103))
-        `Reconstruction Method`.
-    ReconFilterType:
-      level: required
-      description_addendum: |
-        This partly matches the [DICOM Tag 0018, 1210](https://dicomlookup.com/dicomtags/(0018,1210))
-        `Convolution Kernel`.
+    ReconFilterType: required
     ReconFilterSize:
       level: recommended
       level_addendum: required if `ReconFilterType` is not `"none"`
-      description_addendum: |
-        This partly matches the [DICOM Tag 0018, 1210](https://dicomlookup.com/dicomtags/(0018,1210))
-        `Convolution Kernel`.
-    AttenuationCorrection:
-      level: required
-      description_addendum: |
-        This corresponds to [DICOM Tag 0054, 1101](https://dicomlookup.com/dicomtags/(0054,1101))
-        `Attenuation Correction Method`.
+    AttenuationCorrection: required
     ReconMethodImplementationVersion: recommended
     AttenuationCorrectionMethodReference: recommended
     ScaleFactor: recommended
-    ScatterFraction:
-      level: recommended
-      description_addendum: |
-        Corresponds to [DICOM Tag 0054, 1323](https://dicomlookup.com/dicomtags/(0054,1323)) `Scatter Fraction Factor`.
-    DecayCorrectionFactor:
-      level: recommended
-      description_addendum: |
-        Corresponds to [DICOM Tag 0054, 1321](https://dicomlookup.com/dicomtags/(0054,1321)) `Decay Factor`.
-    DoseCalibrationFactor:
-      level: recommended
-      description_addendum: |
-        Corresponds to [DICOM Tag 0054, 1322](https://dicomlookup.com/dicomtags/(0054,1322)) `Dose Calibration Factor`.
+    ScatterFraction: recommended
+    DecayCorrectionFactor: recommended
+    DoseCalibrationFactor: recommended
     PromptRate: recommended
     SinglesRate: recommended
     RandomRate: recommended
