[ENH] Make Pharmaceutical metadata terms less PET-specific (#2294)
* RF: PharmaceuticalDoseAmount - shift mentioning of a "tracer" into PET use

We are to introduce use of Pharma* fields into BEP032 where it has no notion of tracers.
I am moving this extra description to become PET specific, but also PET people might want
to double check if that is what was actually intended (or it could be administered separate
from the tracer

* Fix DICOM tag for Intervention Drug Dose

Co-authored-by: Chris Markiewicz <markiewicz@stanford.edu>

* fix: use 0018 not 0008 section for Drug DICOM fields and format consistently with others and hyperlink

* Also move "tracer" mentioning into addendum for PharmaceuticalName

---------

Co-authored-by: Chris Markiewicz <markiewicz@stanford.edu>

--- a/src/schema/rules/sidecars/pet.yaml
+++ b/src/schema/rules/sidecars/pet.yaml
@@ -123,18 +123,21 @@ PETPharmaceuticals:
     PharmaceuticalName:
       level: recommended
       description_addendum: |
-        Corresponds to [DICOM Tag 0008, 0034](https://dicomlookup.com/dicomtags/(0008,0034)) `Intervention Drug Name`.
+        For pharmaceutical co-administered with tracer.
+        Corresponds to [DICOM Tag 0018, 0034](https://dicomlookup.com/dicomtags/(0018,0034)) `Intervention Drug Name`.
     PharmaceuticalDoseAmount:
       level: recommended
       description_addendum: |
-        Corresponds to [DICOM Tag 0008, 0028](https://dicomlookup.com/dicomtags/(0008,0028)) `Intervention Drug Dose`.
+        For pharmaceutical co-administered with tracer.
+        Corresponds to [DICOM Tag 0018, 0028](https://dicomlookup.com/dicomtags/(0018,0028)) `Intervention Drug Dose`.
     PharmaceuticalDoseUnits: recommended
     PharmaceuticalDoseRegimen: recommended
     PharmaceuticalDoseTime:
       level: recommended
       description_addendum: |
-        Corresponds to a combination of DICOM Tags (0008,0027) `Intervention Drug Stop Time`
-        and (0008,0035) `Intervention Drug Start Time`.
+        Corresponds to a combination of DICOM Tags
+        [0018, 0027](https://dicomlookup.com/dicomtags/(0018,0027)) `Intervention Drug Stop Time` and
+        [0018, 0035](https://dicomlookup.com/dicomtags/(0018,0035)) `Intervention Drug Start Time`.
     Anaesthesia: optional
 
 PETTime:
